# cli-novel-writer

./: .gitignore  .writers-enhanced.json  BLOG_MODE_GUIDE.md  CLI_WORDCOUNT_DIALOG_FIX.md  COPY_PASTE_GUIDE.md  COPY_PASTE_SUMMARY.md  CURSOR_MODES.md  DELETE_LINE_FEATURE.md  DIALOG_FIX_SUMMARY.md  EDITING_GUIDE.md  EDITOR_GUIDE.md  ENHANCED_EDITOR_FEATURES.md  ENHANCED_FEATURES.md  ENHANCED_SHORT_STORY_WORKFLOW.md  FOCUS-MODE.md  FOCUSED_TYPEWRITER_IMPLEMENTATION.md  GO_PORT_SUMMARY.md  GUI-FIX-SUMMARY.md  GUI-IMPLEMENTATION.md  GUI-QUICKSTART.md  GUI-README.md  GUI_FEATURES.md  GUI_REFACTOR_README.md  GUI_SETUP_COMPLETE.md  GUI_TESTING_GUIDE.md  MODEL_MANAGEMENT.md  NAVIGATION_IMPROVEMENTS.md  NAVIGATION_REFERENCE.md  NOTES_TOGGLE_FEATURE.md  NOVEL_EDITOR_INTEGRATION.md  POMODORO_IMPLEMENTATION_SUMMARY.md  POMODORO_TIMER_FIXED.md  POMODORO_TIMER_GUIDE.md  POPUP_CONTRAST_SUMMARY.md  POPUP_VISIBILITY_SOLUTION.md  README-WRITERS-CLI.md  README.md  SHORT_STORY_GUIDE.md  SHORT_STORY_QUICKSTART.md  SIMPLE_SHORT_STORY_GUIDE.md  (+122 more)
backups/: chapter-1-the-awakening-2025-07-29T07-35-06-399Z.md  chapter-1-the-awakening-2025-07-30T11-22-22-785Z.md  eliza-2025-07-31T15-18-04-073Z.md
chapters/: chapter-1-the-awakening.md  dsf.md  tefds.md  test.md
characters/: g-notes.md  g.md  george.md
demo-blog-project/: README.md  writers.config.json
demo-novel/: README.md  writers.config.json
demo-project/: README.md  writers.config.json
drafts/: js.md
go-port/: Makefile  README.md  go.mod  go.sum  main.go  test-build.sh  test-demo.md
gui/: README.md  enhanced-interface.html  enhanced-main.js  main-enhanced.js  main-fixed.js  main-new.js  main.js  project-interface-fixed.html  project-interface.html  project-main.js  renderer.html  renderer.js  voice-interface.html
my-blog/: .gitignore  README.md  writers.config.json
my-fantasy-novel/: README.md  writers.config.json
notes/: todo.md
rust-cli/: Cargo.toml  README.md
rust-cli/src/: main.rs
rust-cli/src/commands/: edit.rs  export.rs  gui.rs  init.rs  init_blog.rs  init_short.rs  init_shortstory.rs  list.rs  mod.rs  new.rs  simplify.rs  stats.rs  story.rs  workflow.rs  write.rs  write_classic.rs
rust-cli/src/editor/: buffer.rs  cursor.rs  editor.rs  input.rs  mod.rs  screen.rs
rust-cli/src/utils/: project.rs
rust-gui/: Cargo.toml  README.md
rust-gui/src/: backup.rs  collaboration.rs  export.rs  main.rs  project.rs  themes.rs  utils.rs  writing.rs
rust-gui/src-tauri/: tauri.conf.json
rust-gui/src/commands/: mod.rs
scenes/: scene-1.md  scene-2.md
short/: .gitignore  PROJECT_GUIDE.md  README.md  writers.config.json
shortstories/: eliza-notes.md  mirror-mirror.md  the-gardener.md  (+1 more)
(+139 files in other folders)
