[package]
name = "writers-cli"
version = "1.0.0"
edition = "2021"
description = "A CLI tool for writing novels and short stories with markdown support"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/writers-cli.git"
homepage = "https://github.com/yourusername/writers-cli#readme"
readme = "README.md"
keywords = ["writing", "novel", "short-story", "cli", "markdown", "author", "book", "fiction"]

[[bin]]
name = "writers"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
crossterm = "0.27"
unicode-width = "0.1"

[dev-dependencies]
