[package]
name = "writers-gui"
version = "1.0.0"
description = "A modern Rust-based GUI for the Writers CLI novel writing tool"
authors = ["Writers CLI Team"]
license = "MIT"
repository = "https://github.com/yourusername/writers-cli"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "api-all", "updater" ] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
walkdir = "2.0"
regex = "1.0"
markdown = "1.0"
pulldown-cmark = "0.10"
htmlescape = "0.3"
zip = "0.6"
tempfile = "3.0"
fs_extra = "1.3"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
notify = "6.0"
parking_lot = "0.12"
dashmap = "5.0"
once_cell = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
